--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -21,4 +21,8 @@
     <button class="btn btn-success"
      type="submit" 
      [disabled]="myForm.invalid">Register</button>
+     <button 
+    class="btn btn-success" 
+    (click)="goToLogin()">
+    Go to Login</button>
 </form>
